--- a/refs.bib
+++ b/refs.bib
@@ -17,6 +17,142 @@
   publisher={Oxford University Press}
 }
 
+
+@article{PhysRevLett.112.241101,
+  title = {Detection of $B$-Mode Polarization at Degree Angular Scales by BICEP2},
+  author = {Ade, P. A. R. and Aikin, R. W. and Barkats, D. and Benton, S. J. and Bischoff, C. A. and Bock, J. J. and Brevik, J. A. and Buder, I. and Bullock, E. and Dowell, C. D. and Duband, L. and Filippini, J. P. and Fliescher, S. and Golwala, S. R. and Halpern, M. and Hasselfield, M. and Hildebrandt, S. R. and Hilton, G. C. and Hristov, V. V. and Irwin, K. D. and Karkare, K. S. and Kaufman, J. P. and Keating, B. G. and Kernasovskiy, S. A. and Kovac, J. M. and Kuo, C. L. and Leitch, E. M. and Lueker, M. and Mason, P. and Netterfield, C. B. and Nguyen, H. T. and O'Brient, R. and Ogburn, R. W. and Orlando, A. and Pryke, C. and Reintsema, C. D. and Richter, S. and Schwarz, R. and Sheehy, C. D. and Staniszewski, Z. K. and Sudiwala, R. V. and Teply, G. P. and Tolan, J. E. and Turner, A. D. and Vieregg, A. G. and Wong, C. L. and Yoon, K. W.},
+  collaboration = {BICEP2 Collaboration},
+  journal = {Phys. Rev. Lett.},
+  volume = {112},
+  issue = {24},
+  pages = {241101},
+  numpages = {25},
+  year = {2014},
+  month = {Jun},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.112.241101},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.112.241101}
+}
+
+
+
+
+@article{PhysRevLett.106.241301,
+  title = {Excess Clustering on Large Scales in the MegaZ DR7 Photometric Redshift Survey},
+  author = {Thomas, Shaun A. and Abdalla, Filipe B. and Lahav, Ofer},
+  journal = {Phys. Rev. Lett.},
+  volume = {106},
+  issue = {24},
+  pages = {241301},
+  numpages = {4},
+  year = {2011},
+  month = {Jun},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.106.241301},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.106.241301}
+}
+
+
+@ARTICLE{2015ApJ...814..145A,
+       author = {{Alonso}, David and {Bull}, Philip and {Ferreira}, Pedro G. and {Maartens}, Roy and {Santos}, M{\'a}rio G.},
+        title = "{Ultra-large-scale Cosmology in Next-generation Experiments with Single Tracers}",
+      journal = {\apj},
+     keywords = {large-scale structure of universe, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2015,
+        month = dec,
+       volume = {814},
+       number = {2},
+          eid = {145},
+        pages = {145},
+          doi = {10.1088/0004-637X/814/2/145},
+archivePrefix = {arXiv},
+       eprint = {1505.07596},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015ApJ...814..145A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2023arXiv230308901S,
+       author = {{Sullivan}, James M and {Prijon}, Tijan and {Seljak}, Uros},
+        title = "{Learning to Concentrate: Multi-tracer Forecasts on Local Primordial Non-Gaussianity with Machine-Learned Bias}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2023,
+        month = mar,
+          eid = {arXiv:2303.08901},
+        pages = {arXiv:2303.08901},
+          doi = {10.48550/arXiv.2303.08901},
+archivePrefix = {arXiv},
+       eprint = {2303.08901},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023arXiv230308901S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{2023arXiv230102406J,
+       author = {{Jolicoeur}, Sheean and {Maartens}, Roy and {Dlamini}, Simthembile},
+        title = "{Constraining primordial non-Gaussianity by combining next-generation galaxy and 21 cm intensity mapping surveys}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2023,
+        month = jan,
+          eid = {arXiv:2301.02406},
+        pages = {arXiv:2301.02406},
+          doi = {10.48550/arXiv.2301.02406},
+archivePrefix = {arXiv},
+       eprint = {2301.02406},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023arXiv230102406J},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+
+@ARTICLE{2016arXiv161002743A,
+       author = {{Abazajian}, Kevork N. and {Adshead}, Peter and {Ahmed}, Zeeshan and {Allen}, Steven W. and {Alonso}, David and {Arnold}, Kam S. and {Baccigalupi}, Carlo and {Bartlett}, James G. and {Battaglia}, Nicholas and {Benson}, Bradford A. and {Bischoff}, Colin A. and {Borrill}, Julian and {Buza}, Victor and {Calabrese}, Erminia and {Caldwell}, Robert and {Carlstrom}, John E. and {Chang}, Clarence L. and {Crawford}, Thomas M. and {Cyr-Racine}, Francis-Yan and {De Bernardis}, Francesco and {de Haan}, Tijmen and {di Serego Alighieri}, Sperello and {Dunkley}, Joanna and {Dvorkin}, Cora and {Errard}, Josquin and {Fabbian}, Giulio and {Feeney}, Stephen and {Ferraro}, Simone and {Filippini}, Jeffrey P. and {Flauger}, Raphael and {Fuller}, George M. and {Gluscevic}, Vera and {Green}, Daniel and {Grin}, Daniel and {Grohs}, Evan and {Henning}, Jason W. and {Hill}, J. Colin and {Hlozek}, Renee and {Holder}, Gilbert and {Holzapfel}, William and {Hu}, Wayne and {Huffenberger}, Kevin M. and {Keskitalo}, Reijo and {Knox}, Lloyd and {Kosowsky}, Arthur and {Kovac}, John and {Kovetz}, Ely D. and {Kuo}, Chao-Lin and {Kusaka}, Akito and {Le Jeune}, Maude and {Lee}, Adrian T. and {Lilley}, Marc and {Loverde}, Marilena and {Madhavacheril}, Mathew S. and {Mantz}, Adam and {Marsh}, David J.~E. and {McMahon}, Jeffrey and {Meerburg}, Pieter Daniel and {Meyers}, Joel and {Miller}, Amber D. and {Munoz}, Julian B. and {Nguyen}, Ho Nam and {Niemack}, Michael D. and {Peloso}, Marco and {Peloton}, Julien and {Pogosian}, Levon and {Pryke}, Clement and {Raveri}, Marco and {Reichardt}, Christian L. and {Rocha}, Graca and {Rotti}, Aditya and {Schaan}, Emmanuel and {Schmittfull}, Marcel M. and {Scott}, Douglas and {Sehgal}, Neelima and {Shandera}, Sarah and {Sherwin}, Blake D. and {Smith}, Tristan L. and {Sorbo}, Lorenzo and {Starkman}, Glenn D. and {Story}, Kyle T. and {van Engelen}, Alexander and {Vieira}, Joaquin D. and {Watson}, Scott and {Whitehorn}, Nathan and {Kimmy Wu}, W.~L.},
+        title = "{CMB-S4 Science Book, First Edition}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, General Relativity and Quantum Cosmology, High Energy Physics - Phenomenology, High Energy Physics - Theory},
+         year = 2016,
+        month = oct,
+          eid = {arXiv:1610.02743},
+        pages = {arXiv:1610.02743},
+          doi = {10.48550/arXiv.1610.02743},
+archivePrefix = {arXiv},
+       eprint = {1610.02743},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016arXiv161002743A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+
+@ARTICLE{2011PhRvD..84b3520P,
+       author = {{Peterson}, Courtney M. and {Tegmark}, Max},
+        title = "{Non-Gaussianity in two-field inflation}",
+      journal = {\prd},
+     keywords = {98.80.Cq, Particle-theory and field-theory models of the early Universe, Astrophysics - Cosmology and Nongalactic Astrophysics, High Energy Physics - Phenomenology, High Energy Physics - Theory},
+         year = 2011,
+        month = jul,
+       volume = {84},
+       number = {2},
+          eid = {023520},
+        pages = {023520},
+          doi = {10.1103/PhysRevD.84.023520},
+archivePrefix = {arXiv},
+       eprint = {1011.6675},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2011PhRvD..84b3520P},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+
 @ARTICLE{2019JCAP...09..010C,
        author = {{Castorina}, Emanuele and {Hand}, Nick and {Seljak}, Uro{\v{s}} and {Beutler}, Florian and {Chuang}, Chia-Hsun and {Zhao}, Cheng and {Gil-Mar{\'\i}n}, H{\'e}ctor and {Percival}, Will J. and {Ross}, Ashley J. and {Choi}, Peter Doohyun and {Dawson}, Kyle and {de la Macorra}, Axel and {Rossi}, Graziano and {Ruggeri}, Rossana and {Schneider}, Donald and {Zhao}, Gong-Bo},
         title = "{Redshift-weighted constraints on primordial non-Gaussianity from the clustering of the eBOSS DR14 quasars in Fourier space}",
@@ -666,14 +802,32 @@ archivePrefix = {arXiv},
 }
 
 @article{de2017next,
-  title={Next non-Gaussianity frontier: What can a measurement with $\sigma$ (f NL)≲ 1 tell us about multifield inflation?},
-  author={de Putter, Roland and Gleyzes, J{\'e}r{\^o}me and Dor{\'e}, Olivier},
-  journal={Physical Review D},
-  volume={95},
-  number={12},
-  pages={123507},
-  year={2017},
-  publisher={APS}
+  title = {Next non-Gaussianity frontier: What can a measurement with $\ensuremath{\sigma}({f}_{\mathrm{NL}})\ensuremath{\lesssim}1$ tell us about multifield inflation?},
+  author = {de Putter, Roland and Gleyzes, J\'er\^ome and Dor\'e, Olivier},
+  journal = {Phys. Rev. D},
+  volume = {95},
+  issue = {12},
+  pages = {123507},
+  numpages = {23},
+  year = {2017},
+  month = {Jun},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.95.123507},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.95.123507}
+}
+
+@article{Byrnes_2008,
+	doi = {10.1088/1475-7516/2008/10/008},
+	url = {https://doi.org/10.1088%2F1475-7516%2F2008%2F10%2F008},
+	year = 2008,
+	month = {oct},
+	publisher = {{IOP} Publishing},
+	volume = {2008},
+	number = {10},
+	pages = {008},
+	author = {Christian T Byrnes and Ki-Young Choi and Lisa M H Hall},
+	title = {Conditions for large non-Gaussianity in two-field slow-roll inflation},  
+	journal = {Journal of Cosmology and Astroparticle Physics}
 }
 
 @article{baldauf2011galaxy,
