--- a/sections/methodology.tex
+++ b/sections/methodology.tex
@@ -21,9 +21,13 @@ The mean galaxy density $\overline{\rho}$ is estimated from the entire LRG sampl
         \tilde{C}_{\ell} = \frac{1}{2\ell +1} \sum_{m=-\ell}^{\ell} |a_{\ell m}|^{2}.
 \end{equation}
 
-We use the implementation of \texttt{anafast} from the \textsc{HEALPix} package \citep{gorski2005healpix} to do fast harmonic transforms and estimate the pseudo angular power spectrum and cross power spectrum. When the sky coverage of a survey is incomplete, this estimator yields a biased power spectrum. Specifically, the survey mask causes correlations between different harmonic modes, \mr{and the measured clustering power is smoothed on scales near the survey size.} Since these scales are highly sensitive to local primordial non-Gaussianity, it is crucial to account for these systematic effects in the model galaxy power spectrum to obtain unbiased $\fnl$ constraints, \mr{which we describe in the next subsection}.
+We use the implementation of \texttt{anafast} from the \textsc{HEALPix} package \citep{gorski2005healpix} to do fast harmonic transforms and estimate the pseudo angular power spectrum and cross power spectrum. When the sky coverage of a survey is incomplete, this estimator yields a biased power spectrum. Specifically, the survey mask causes correlations between different harmonic modes \citep{beutler2014clustering,wilson2017rapid}, \mr{and the measured clustering power is smoothed on scales near the survey size.} Since these scales are highly sensitive to local primordial non-Gaussianity, it is crucial to account for these systematic effects in the model galaxy power spectrum to obtain unbiased $\fnl$ constraints, \mr{which we describe in the next subsection}.
 
  \subsection{Modelling}
+ 
+Relativistic effects also generate PNG-like scale-dependent signatures on large scales, which interfere with measuring $\fnl$ with the scale-dependent bias effect \citep{wang2020}. Similarly, matter density fluctuations with wavelengths larger than survey size, known as super-sample modes, modulate the galaxy power spectrum \citep{castorina2020JCAP}. In a similar way, the peculiar motion of the observer can mimic a PNG-like scale-dependent signature through aberration, magnification and the Kaiser-Rocket effect, i.e., a systematic dipolar apparent blue-shifting in the direction of the observer's peculiar motion \citep{2021JCAP...11..027B}. However, acting radially, this effect is subdominant in angular clustering measurements. An additional potential cause of systematic error arises from the fact that the mean galaxy density used to construct the density contrast field is estimated from the available data, rather than being known a priori. This introduces what is known as an integral constraint effect, which can cause the power spectrum on modes near the size of the survey to be artificially suppressed, effectively pushing it towards zero \citep{peacock1991large,de2019integral}. Accounting for these theoretical systematic effects in the galaxy power spectrum is crucial to obtain unbiased inference about $\fnl$ \citep[see, e.g.,][]{riquelme2022primordial}.
+ 
+ 
 \subsubsection{Angular power spectrum}
 \mr{Would non-linear P(k) matter?} The relationship between the linear matter power spectrum $P(k)$ and the projected angular power spectrum of galaxies is expressed by the following equation:
 \begin{equation}\label{eq:cell}
@@ -39,9 +43,7 @@ where $b$ is the linear bias (dashed curve in Figure \ref{fig:nz}), $D$ represen
 \Delta b = b_{\phi}(z) \fnl \frac{3 \Omega_{m} H^{2}_{0}}{2 k^{2}T(k)D(z) c^{2}} \frac{g(\infty)}{g(0)},
 \label{eq:scaledepbias}
 \end{equation}
-where $\Omega_{m}$ is the matter density, $H_{0}$ is the Hubble constant\footnote{$H_{0}=100~({\rm km}~{\rm s}^{-1})/(h^{-1}{\rm Mpc})$ and $k$ is in unit of $h {\rm Mpc}^{-1}$}, $T(k)$ is the transfer function, and $g(\infty)/g(0) \sim 1.3$ with $g(z)\equiv (1+z) D(z)$ is the growth suppression due to non-zero $\Lambda$ because of our normalization of $D$ \citep[see, e.g.,][]{2010JCAP...07..013R, 2019MNRAS.485.4160M}. 
-
-The bias parameter $b_{\phi}$ describes the response of galaxy formation to primordial potential perturbations in the presence of local PNG. \mr{Assuming that only mass determines the halo occupation function, $b_{\phi} = 2 \delta_{c}(b - p)$, where $p=1$ and $\delta_{c}= 1.686$ is the critical density for spherical collapse \citep{fillmore1984self}.} \mr{Santi: p=1 for galaxies assumes this on top of assuming that halos follow a universal halo mass function (only depending on peak height)} The theoretical uncertainty on $p$ is not very well constrained, and \cite{2022JCAP...11..013B} showed that marginalizing over this parameter even with wide priors leads to biased $\fnl$ constraints because of parameter space projection effects. \cite{2023JCAP...01..023L} used N-body simulations to investigate secondary halo properties, such as concentration, spin and sphericity of haloes, and found that halo spin and sphericity preserve the universality of the halo occupation function while halo concentration significantly alters the halo function. Without better-informed priors on $p$, it is argued that the scale-dependent bias effect can only  be used to constrain the $b_{\phi}\fnl$ term \citep[see, e.g.,][]{2020JCAP...12..013B, 2020JCAP...12..031B}. However, the detection significance of local PNG remains unaffected by various assumptions regarding $p$. This means that a nonzero detection of $b_{\phi}\fnl$ at a certain confidence level will still indicate a nonzero detection of $\fnl$ at that same confidence level. This paper is focused on how a careful assessment of imaging systematic effects, or lack thereof, can bias our PNG constraints. Therefore, we choose $p=1$ for our sample of DESI LRG targets \citep[see, also,][]{slosar2008constraints,2010JCAP...07..013R,2013MNRAS.428.1116R}, and do not marginalize over $p$ to avoid projection effects \citep{2022JCAP...11..013B}.
+where $\Omega_{m}$ is the matter density, $H_{0}$ is the Hubble constant\footnote{$H_{0}=100~({\rm km}~{\rm s}^{-1})/(h^{-1}{\rm Mpc})$ and $k$ is in unit of $h {\rm Mpc}^{-1}$}, $T(k)$ is the transfer function, and $g(\infty)/g(0) \sim 1.3$ with $g(z)\equiv (1+z) D(z)$ is the growth suppression due to non-zero $\Lambda$ because of our normalization of $D$ \citep[see, e.g.,][]{2010JCAP...07..013R, 2019MNRAS.485.4160M}. \mr{Assuming that only mass determines the halo occupation function, $b_{\phi} = 2 \delta_{c}(b - p)$, where $p=1$ and $\delta_{c}= 1.686$ is the critical density for spherical collapse \citep{fillmore1984self}.} This paper is focused on how a careful assessment of imaging systematic effects, or lack thereof, can bias our PNG constraints. Therefore, we choose $p=1$ for our sample of DESI LRG targets \citep[see, also,][]{slosar2008constraints,2010JCAP...07..013R,2013MNRAS.428.1116R}, and do not marginalize over $p$ to avoid projection effects \citep{2022JCAP...11..013B}. \mr{Santi: p=1 for galaxies assumes this on top of assuming that halos follow a universal halo mass function (only depending on peak height)}.
 
 \subsubsection{Survey geometry and integral constraint}
 \mr{We employ a technique similar to the one proposed by \cite{chon2004fast} to account for the impact of the survey geometry on the theoretical power spectrum.} The ensemble average for the partial sky power spectrum is related to that of the full sky power spectrum via a mode-mode coupling matrix, ${\rm M}_{\ell \ell^{\prime}}$,
