--- a/style.sty
+++ b/style.sty
@@ -24,7 +24,7 @@
 % ----- add your commands
 \newcommand\here{\textcolor{red}{\textbf{HERE}\hrule}}
 \newcommand{\mr}[1]{\textcolor{red}{#1}}
-\newcommand{\mc}[1]{\textcolor{cyan}{\textit{#1}}}
+\newcommand{\mc}[1]{\textcolor{purple}{\textit{#1}}}
 \newcommand{\bbk}[1]{\textcolor{magenta}{#1}}
 \newcommand{\fnl}{f_{\rm NL}}
 
