updates until review committee req

--- a/sections/extra.tex
+++ b/sections/extra.tex
@@ -109,7 +109,7 @@ Contaminated $76.92$ & Nine Maps        & $  4.59$& $  4.58$& $  4.26<\fnl<  4.9
 \includegraphics[width=0.45\textwidth]{figures/mcmc_contnoshift.pdf}
 \includegraphics[width=0.45\textwidth]{figures/mcmcp_cont.pdf}
 \includegraphics[width=0.45\textwidth]{figures/mcmcp_contnoshift.pdf}
-\caption{Probability distributions of $\fnl$ from the mean power spectrum of the $\fnl=0$ (top) and $\fnl=76.9$ (bottom) mocks before and after mitigation with the non-linear methods using three, four, and nine maps. Left: The posteriors are adjusted to account for the over correction effect. Right: The posteriors are subject to the over correction effect, and thus the scaling of $\fnl$ values is biased due to mitigation.}\label{fig:contmcmc}
+\caption{Probability distributions of $\fnl$ from the mean power spectrum of the $\fnl=0$ (top) and $\fnl=76.9$ (bottom) mocks before and after mitigation with the non-linear methods using three, four, and nine maps. The dashed (solid) curves show the distributions for the contaminated (clean) mocks. Left: The posteriors are adjusted to account for the over correction effect. Right: The posteriors are subject to the over correction effect, and thus the scaling of $\fnl$ values is biased due to mitigation.}\label{fig:contmcmc}
 \end{figure*}
 
 
