--- a/sections/data.tex
+++ b/sections/data.tex
@@ -40,11 +40,11 @@ Our sample of LRGs is drawn from the DESI Legacy Imaging Surveys Data Release 9 
 \begin{figure*}
  \centering
  \includegraphics[width=0.99\textwidth]{figures/dr9data.pdf}
- \caption{Top: The DESI LRG target density map before correcting for imaging systematic effects in Mollweide projection. The disconnected islands from the North footprint and parts of the South footprint with declination below $-30$ are removed from the sample for the analysis due to potential calibration issues (see text). Bottom: Mollweide projections of the imaging systematic maps (survey depth, astronomical seeing/psfsize, Galactic extinction, and local stellar density) in celestial coordinates. Not shown here are two external maps for the neutral hydrogen column density and photometric calibration, which are only employed for the robustness tests. The imaging systematic maps are colour-coded to show increasing values from blue to red.}
+ \caption{Top: The DESI LRG target density map before correcting for imaging systematic effects in Mollweide projection. The disconnected islands from the North footprint and parts of the South footprint with declination below $-30$ are removed from the sample for the analysis due to potential calibration issues (see text). Bottom: Mollweide projections of the imaging systematic maps (survey depth, astronomical seeing/psfsize, Galactic extinction, and local stellar density) in celestial coordinates. Not shown here are two external maps for the neutral hydrogen column density and photometric calibration, which are only employed for the robustness tests. The imaging systematic maps are colour-coded to show increasing values from blue to red. \mc{Edmond: In the SV paper, we decided to plot the galactic map in the other direction, i.e., invert the R.A. axis.}}
  \label{fig:ng}
 \end{figure*}
 
-The LRG sample is masked rigorously for foreground bright stars, bright galaxies, and clusters of galaxies\footnote{See \url{https://www.legacysurvey.org/dr9/bitmasks/} for maskbit definitions.} to further reduce stellar contamination \citep{zhou2022target}. Then, the sample is binned into \textsc{HEALPix} \citep{gorski2005healpix} pixels at $\textsc{nside}=256$ to construct the 2D density map (as shown in the top panel of Figure \ref{fig:ng}). The LRG density is corrected for the pixel incompleteness and lost areas using a catalogue of random points, hereafter referred to as randoms, uniformly scattered over the footprint with the same cuts and masks applied. Moreover, the density of galaxies is matched to the randoms separately for each of the three data sections (BASS+MzLS, DECaLS North / South) so the mean density differences are mitigated. The DESI LRG targets are selected brighter than the imaging survey depth limits, e.g., $g=23.72,~r=23.27,~{\rm and}~z=22.22$ for the median $5\sigma$ detection in AB mag  in the DECaLS region \citep{dey2018overview}; and thus the LRG density map does not exhibit severe spurious fluctuations.
+The LRG sample is masked rigorously for foreground bright stars, bright galaxies, and clusters of galaxies\footnote{See \url{https://www.legacysurvey.org/dr9/bitmasks/} for maskbit definitions.} to further reduce stellar contamination \citep{zhou2022target}. Then, the sample is binned into \textsc{HEALPix} \citep{gorski2005healpix} pixels at $\textsc{nside}=256$ to construct the 2D density map (as shown in the top panel of Figure \ref{fig:ng}). The LRG density is corrected for the pixel incompleteness and lost areas using a catalogue of random points, hereafter referred to as randoms, uniformly scattered over the footprint with the same cuts and masks applied. Moreover, the density of galaxies is matched to the randoms separately for each of the three data sections (BASS+MzLS, DECaLS North / South) so the mean density differences are mitigated. The DESI LRG targets are selected brighter than the imaging survey depth limits, e.g., $g=23.72,~r=23.27,~{\rm and}~z=22.22$ for the median $5\sigma$ detection in AB mag  in the DECaLS region \citep{dey2018overview}; and thus the LRG density map does not exhibit severe spurious fluctuations. \mc{Edmond: Maybe give the resolution for each photometric footprint as Table 2 in the SV overview paper?}
 
 \subsubsection{Imaging systematic maps}
 \cite{zhou2022target} has previously identified nine astrophysical properties as potential sources of imaging systematic errors in the DESI LRG targets. The properties are mapped into \textsc{HEALPix} of \textsc{nside}$=256$. As illustrated by a $3x3$ grid in the bottom panel of Figure \ref{fig:ng}, the maps include local stellar density constructed from point-like sources with a G-band magnitude in the range $12 \leq G < 17$ from the \textit{Gaia} DR2 \citep[see,][]{gaiadr2, myers2022}; Galactic extinction E[B-V] from \cite{schlegel1998maps}; survey depth (galaxy depth in $g$, $r$, and $z$ and PSF depth in W1) and astronomical seeing (psfsize) in $g$, $r$, and $z$. The depth maps have been corrected for extinction using the coefficients adapted from \cite{2011ApJ...737..103S}. In addition to these nine maps, we consider two external maps for the neutral hydrogen column density (HI) from \cite{2016A&A...594A.116H} and photometric calibration in the z-band (CALIBZ) from \mr{CITE} to further test the robustness of our analysis against unknown systematics.
@@ -59,18 +59,18 @@ Each imaging map carries its characteristic fluctuations, which correlate with t
  \label{fig:pcc}
 \end{figure}
 
-Figure \ref{fig:pcc} shows the Pearson correlation coefficient between the DESI LRG target density map and the imaging systematics maps for the three imaging regions (DECaLS North, DECaLS South, and BASS+MzLS) in the top panel. The horizontal curves represent the $95\%$ confidence regions for no correlation and are constructed by cross-correlating 100 synthetic lognormal density fields and the imaging systematic maps. There are statistically significant correlations between the LRG density and depth, extinction, and stellar density. There are less significant correlations between the LRG density and the $W1$-band depth and psfsize in DECaLS South and DECaLS North. Figure \ref{fig:pcc} (bottom panel) shows the correlation matrix among the imaging systematics maps for the entire DESI footprint. Significant inner correlations exist among the imaging systematic maps themselves, especially between local stellar density and Galactic extinction; also, the $r$-band and $g$-band survey properties are more correlated with each other than with the $z$-band counterpart. We compute the Spearman correlation coefficients between the LRG density and imaging systematic maps as well to assess whether or not the correlations are impacted by outliers in the imaging data, but find no substantial differences from Pearson.
+Figure \ref{fig:pcc} shows the Pearson correlation coefficient between the DESI LRG target density map and the imaging systematics maps for the three imaging regions (DECaLS North, DECaLS South, and BASS+MzLS) in the top panel. The horizontal curves represent the $95\%$ confidence regions for no correlation and are constructed by cross-correlating 100 synthetic lognormal density fields and the imaging systematic maps. There are statistically significant correlations between the LRG density and depth, extinction, and stellar density. There are less significant correlations between the LRG density and the $W1$-band depth and psfsize in DECaLS South and DECaLS North. Figure \ref{fig:pcc} (bottom panel) shows the correlation matrix among the imaging systematics maps for the entire DESI footprint. Significant inner correlations exist among the imaging systematic maps themselves, especially between local stellar density and Galactic extinction; also, the $r$-band and $g$-band survey properties are more correlated with each other than with the $z$-band counterpart. Additionally, we compute the Spearman correlation coefficients between the LRG density and imaging systematic maps to assess whether or not the correlations are impacted by outliers in the imaging data, but find no substantial differences from Pearson.
 
 The effects of observational systematics in the DESI targets have been studied in great detail \cite[see, e.g.,][]{kitanidis2020imaging, zhou2021clustering, chaussidon2022angular}. There are several approaches for handling imaging systematic errors, broadly classified into data-driven and simulation-based modeling approaches. The general idea behind these approaches is to use the available data or simulations to learn or forward model the relationship between the observed target density and the imaging systematic maps, and to use this relationship, which is often described by a set of \textit{imaging weights}, to mitigate spurious fluctuations in the observed target density. Another techniques for reducing the effect of imaging systematics rely on cross-correlating different tracers of dark matter to ameliorate excess clustering signals, as each tracer might respond differently to a source of systematic error \citep[see, e.g.,][]{giannantonio2014improved}. These methods have their limitations and strengths \citep[see, e.g.,][for a review]{2021MNRAS.503.5061W}.
 
 \subsubsection{Treatment of imaging systematics}
-In this paper, data-driven approaches, including linear multivariate regression and artificial neural networks, are applied to the data to correct for imaging systematic effects. We derive the imaging weights for the BASS+MzLS, DECaLS North and DECaLS South regions separately, since the Pearson correlation coefficient analysis indicated that the level of imaging systematic effects in each region is different, as illustrated in the top panel of Figure \ref{fig:pcc}. Then, we combine the weights from the three regions for the rest of our analysis.
+In this paper, data-driven approaches, including linear multivariate regression and artificial neural networks, are applied to the data to correct for imaging systematic effects. We derive the imaging weights for the BASS+MzLS, DECaLS North and DECaLS South regions separately, since the Pearson correlation coefficient analysis indicated that the level of imaging systematic effects in each region is different, as illustrated in the top panel of Figure \ref{fig:pcc}. Then, we combine the weights from the three regions to analyse the DESI footprint as a whole for the rest of our analysis. Although, we examine the robustness of our results by analyzing each imaging region separately as well.
 
 The linear multivariate model only uses the imaging systematic maps up to the linear power to predict the number counts of the DESI LRG targets in pixel $i$,
 \begin{equation}\label{eq:npred}
-    \rho_{i} = \log ( 1 + \exp[\textbf{a}.\textbf{x}_{i}]),
+    \rho_{i} = \log ( 1 + \exp[\textbf{a}.\textbf{x}_{i}+a_{0}]),
 \end{equation}
-where $\textbf{a}.\textbf{x}_{i}$ represents the inner product between the parameters, $\textbf{a}$, and the values for imaging systematics in pixel $i$, $\textbf{x}_{i}$. The functional form for $\rho_{i}$ is adapted to enforce the predicted galaxy counts to be positive. Then, Markov Chain Monte Carlo (MCMC) random search is performed using the \textsc{emcee} package \citep{2013PASP..125..306F} to explore the parameter space by minimizing the negative Poisson log-likelihood between the actual and predicted number counts of galaxies. No spatial coordinate is included in $\textbf{x}_{i}$ to help avoid over correction, and as a result, the predicted number counts solely reflect the spurious density fluctuations that arise from varying imaging conditions. The number of pixels is substantially larger than the number of parameters for the linear model, and thus no training-validation-testing split is applied to the data for training the linear model. This aligns with the methodology used for training linear models in previous analyses \citep[see, e.g.,][]{zhou2022target}. The predicted galaxy counts are evaluated for each region using the marginalized mean estimates of the parameters, combined with those from other regions to cover the DESI footprint, and then normalized and inverted to represent the imaging weights.
+where $a_{0}$ is a global offset, and $\textbf{a}.\textbf{x}_{i}$ represents the inner product between the parameters, $\textbf{a}$, and the values for imaging systematics in pixel $i$, $\textbf{x}_{i}$. The functional form for $\rho_{i}$ is adapted to enforce the predicted galaxy counts to be positive. Then, Markov Chain Monte Carlo (MCMC) random search is performed using the \textsc{emcee} package \citep{2013PASP..125..306F} to explore the parameter space by minimizing the negative Poisson log-likelihood between the actual and predicted number counts of galaxies. No spatial coordinate is included in $\textbf{x}_{i}$ to help avoid over correction, and as a result, the predicted number counts solely reflect the spurious density fluctuations that arise from varying imaging conditions. The number of pixels is substantially larger than the number of parameters for the linear model, and thus no training-validation-testing split is applied to the data for training the linear model. This aligns with the methodology used for training linear models in previous analyses \citep[see, e.g.,][]{zhou2022target}. The predicted galaxy counts are evaluated for each region using the marginalized mean estimates of the parameters, combined with those from other regions to cover the DESI footprint, and then normalized and inverted to represent the imaging weights.
 
 
 Our neural network-based mitigation approach uses the implementation of fully connected feedforward neural networks from \cite{rezaie2021primordial}. With the neural network approach, $\textbf{a}.\textbf{x}_{i}$ in Equation \ref{eq:npred} is replaced with $NN(\textbf{x}_{i}|\textbf{a})$, where $NN$ represents the fully connected neural network and $\textbf{a}$ denotes its parameters. The implementation, training, validation, and application of neural networks on galaxy survey data are presented in \cite{rezaie2021primordial}. We briefly summarize the methodology here. 
@@ -93,11 +93,10 @@ Our goal is to reduce the correlations between the DESI LRG target density and t
 \item \textbf{Nine maps}: Extinction, depth in $grzW1$, psfsize in $grz$, stellar density.
 \end{enumerate}
 
-\mc{Santi: Elaborate how these maps are selected. Edmond: You can comment a bit on the different combinations; why / how do you decide which combination we want ? (maybe just say that it is explained below, your sentence on visual inspection). Alex: Throughout—I think it would be clearer if you always referred to every method with 2 labels, “[linear/nonlinear] [map name]”.} These sets are established prior to examining the auto power spectrum of the LRG sample. The auto power spectrum measurements are \textit{unblinded} only after our mitigation methods passed our rigorous tests for residual systematics, which we describe in \S \ref{ssec:characterization}. We begin with the linear model and two maps (extinction and depth in z), as these two maps indicated the highest correlations with the LRG density. Linear two maps is the most conservative method in terms of both the model flexibility and the number of input maps. We clean the sample using the imaging weights obtained from \textit{linear two maps}, and find that the linear two maps approach mitigates most of the spurious density fluctuations and reduces the cross-correlations between the LRG density and the imaging systematic maps, except for the trends against psfsize in the r and z bands. Adding the r-band psfsize improves the linear model performance such that the cross correlations are similar to those obtained from \textit{linear eight maps}, which indicates no further information can be extracted from eight maps. Therefore, we identify extinction, depth in z, and psfsize in r (\textit{three maps}) as the primary sources of systematic effects in the DESI LRG targets. Then, we adapt \textit{neural network three maps} to model non-linear systematic effects, and find that the neural network-based weights significantly reduce the cross correlations and spurious density fluctuations. As explained in Section \ref{sec:method}, we consider neural network with four, five, and nine maps to further test for the robustness of our cleaning methods.
-
+\mc{Santi: Elaborate how these maps are selected. Edmond: You can comment a bit on the different combinations; why / how do you decide which combination we want ? (maybe just say that it is explained below, your sentence on visual inspection). Alex: Throughout—I think it would be clearer if you always referred to every method with 2 labels, “[linear/nonlinear] [map name]”.} These sets are established prior to examining the auto power spectrum of the LRG sample and unblinding the $\fnl$ constraints. The auto power spectrum measurements are \textit{unblinded} only after our mitigation methods passed our rigorous tests for residual systematics, which we describe in \S \ref{ssec:characterization}. We begin with the linear model and two maps (extinction and depth in z), as these two maps indicated the highest correlations with the LRG density. Linear two maps is the most conservative method in terms of both the model flexibility and the number of input maps. We clean the sample using the imaging weights obtained from \textit{linear two maps}, and find that the linear two maps approach mitigates most of the spurious density fluctuations and reduces the cross-correlations between the LRG density and the imaging systematic maps, except for the trends against psfsize in the r and z bands. Adding the r-band psfsize improves the linear model performance such that the cross correlations are similar to those obtained from \textit{linear eight maps}, which indicates no further information can be extracted from eight maps. Therefore, we identify extinction, depth in z, and psfsize in r (\textit{three maps}) as the primary sources of systematic effects in the DESI LRG targets. Then, we adapt \textit{neural network three maps} to model non-linear systematic effects, and find that the neural network-based weights significantly reduce the cross correlations and spurious density fluctuations. As explained in Section \ref{sec:method}, we consider neural network with four, five, and nine maps to further test for the robustness of our cleaning methods.
 
 \subsection{Synthetic lognormal density fields}\label{ssec:mocks}
-Density fluctuations of galaxies on large scales can be approximated with lognormal distributions \citep{coles1991}. Unlike N-body simulations, simulating lognormal density fields is not computationally intensive, and allows quick and robust validation of data analysis pipelines. Lognormal simulations are therefore considered efficient for our study since the signature of local PNG appears on large-scales and small-scale clustering is not used in our analysis. The package \textsc{FLASK} \citep[Full-sky Lognormal Astro-fields Simulation Kit;][]{Xavier_2016} is employed to generate ensembles of synthetic lognormal density maps that mimic the bias, redshift, and angular distributions of the DESI LRG targets, as illustrated in Figure \ref{fig:nz} and \ref{fig:ng}. Two universes with $\fnl=0$ and $76.92$ are considered. A set of 1000 realizations are produced for every $\fnl$. The analysis adapts a fiducial cosmology from a flat $\Lambda$CDM universe, including one massive neutrino with $m_{\nu}=0.06$ eV, Hubble constant $h = 0.67$, matter density $\Omega_{M}=0.31$, baryon density $\Omega_{b}=0.05$, and spectral index $n_{s}=0.967$. The amplitude of the matter density fluctuations on a scale of $8 h^{-1} \text{Mpc}$ is set as $\sigma_{8}=0.8225$. The same fiducial cosmology is used throughout this paper unless specified otherwise. \mc{Santi: how sensitive is the fnl signal to the choice of fiducial cosmology.}
+Density fluctuations of galaxies on large scales can be approximated with lognormal distributions \citep{coles1991}. Unlike N-body simulations, simulating lognormal density fields is not computationally intensive, and allows quick and robust validation of data analysis pipelines. Lognormal simulations are therefore considered efficient for our study since the signature of local PNG appears on large-scales and small-scale clustering is not used in our analysis. The package \textsc{FLASK} \citep[Full-sky Lognormal Astro-fields Simulation Kit;][]{Xavier_2016} is employed to generate ensembles of synthetic lognormal density maps that mimic the bias, redshift, and angular distributions of the DESI LRG targets, as illustrated in Figure \ref{fig:nz} and \ref{fig:ng}. Two universes with $\fnl=0$ and $76.92$ are considered. A set of 1000 realizations are produced for every $\fnl$. The analysis adapts the fiducial BOSS cosmology \citep{2017MNRAS.470.2617A} which assumes a flat $\Lambda$CDM universe, including one massive neutrino with $m_{\nu}=0.06$ eV, Hubble constant $h = 0.68$, matter density $\Omega_{M}=0.31$, baryon density $\Omega_{b}=0.05$, and spectral index $n_{s}=0.967$. The amplitude of the matter density fluctuations on a scale of $8 h^{-1} \text{Mpc}$ is set as $\sigma_{8}=0.8225$. The same fiducial cosmology is used throughout this paper unless specified otherwise. \mc{Santi: how sensitive is the fnl signal to the choice of fiducial cosmology.}
 
 \subsubsection{Contaminated mocks}
 The linear model is employed to introduce synthetic spurious fluctuations in the lognormal density fields. The motivation for choosing a linear contamination model is to assess how much of the clustering signal can be removed by applying more flexible and rigorous models, based on neural networks, for correcting imaging systematic effects. The parameter space of the linear model is explored using MCMC, from the relationship between the LRG sample and the imaging systematic maps. The MCMC process is executed separately on each imaging survey using only \textit{three maps} (extinction, depth in z, and psfsize in r) as $\textbf{x}_{i}$. The imaging selection function for contaminating each simulation is uniquely determined by randomly drawing from the parameter space probed by MCMC, and then the results from each imaging survey are combined to form the DESI footprint. The clean density is then multiplied by the contamination model to induce systematics.  The same contamination model is used for both the $\fnl=0$ and $76.92$ simulations.
