--- a/sections/methodology.tex
+++ b/sections/methodology.tex
@@ -1,6 +1,6 @@
 \section{Analysis techniques}
 \label{sec:method} 
-\mc{Ashley: I think somewhere in here (probably near the beginning) you need to describe how the 3 regions are combined, since I think you model their selection function separately and then combine for almost all results shown.}\mr{MR: I mention it the beginning of 2.1.2 and 4. Do you think it should mention it here?}
+\mc{Ashley: I think somewhere in here (probably near the beginning) you need to describe how the 3 regions are combined, since I think you model their selection function separately and then combine for almost all results shown.}\mr{MR: I mention this at the beginning of 2.1.2 and 4. Do you think I should mention it here too?}
 
 
 \subsection{Power spectrum estimator}
@@ -26,7 +26,7 @@ The estimator in Equation \ref{eq:pusedocell} yields a biased power spectrum whe
 The other theoretical systematic issues are however subdominant in the angular power spectrum. For instance, relativistic effects generate PNG-like scale-dependent signatures on large scales, which interfere with measuring $\fnl$ with the scale-dependent bias effect using higher order multipoles of the 3D power spectrum \citep{wang2020}. Similarly, matter density fluctuations with wavelengths larger than survey size, known as super-sample modes, modulate the galaxy 3D power spectrum \citep{castorina2020JCAP}. In a similar way, the peculiar motion of the observer can mimic a PNG-like scale-dependent signature through aberration, magnification and the Kaiser-Rocket effect, i.e., a systematic dipolar apparent blue-shifting in the direction of the observer's peculiar motion \citep{2021JCAP...11..027B}.
   
 \subsubsection{Angular power spectrum}
-\mc{Santi: would nonlinear power spectrum matter? Somewhere here we should mention that the non-linear P(k) matter does not matter, maybe provide a reference.} The relationship between the linear matter power spectrum $P(k)$ and the projected angular power spectrum of galaxies is expressed by the following equation:
+\mc{Santi: would nonlinear power spectrum matter? Somewhere here we should mention that the nonlinear P(k) matter does not matter, maybe provide a reference.} The relationship between the linear matter power spectrum $P(k)$ and the projected angular power spectrum of galaxies is expressed by the following equation:
 \begin{equation}\label{eq:cell}
 C_{\ell} = \frac{2}{\pi}\int_{0}^{\infty}\frac{dk}{k}k^{3}P(k)|\Delta_{\ell}(k)|^{2} + N_{\rm shot},
 \end{equation}
@@ -89,18 +89,18 @@ where $\Theta$ represents a container for the parameters $\fnl$, $b$, and $N_{\r
 
 \subsection{Characterization of remaining systematics}
 \label{ssec:characterization}
-We briefly summarize two statistical tests based on the mean galaxy density contrast and the cross power spectrum between the galaxy density and the imaging systematic maps to assess the quality of the data and the significance of the remaining systematic effects \cite[see, also,][]{rezaie2021primordial}. We calculate these statistics and compare the values to those measured from the clean mocks before looking at the auto power spectrum of the DESI LRG targets.
+\mc{Edmond: compute these for each sub-survey.} We briefly summarize two statistical tests based on the mean galaxy density contrast and the cross power spectrum between the galaxy density and the imaging systematic maps to assess the quality of the data and the significance of the remaining systematic effects \cite[see, also,][]{rezaie2021primordial}. We calculate these statistics and compare the values to those measured from the clean mocks before looking at the auto power spectrum of the DESI LRG targets.
 
 \begin{figure*}
 \centering
 \includegraphics[width=0.95\textwidth]{clx_mocks.pdf}
-\caption{The square of the cross power spectra between the DESI LRG targets and imaging systematic maps normalized by the auto power spectrum of the imaging systematic maps: Galactic extinction (EBV), stellar density (nStar), depth in \textit{grzw1} (depth$_{grzw1}$), and seeing in \textit{grz} (psfsize$_{grz}$). The black curves display the cross spectra before imaging systematic correction. The red, blue and orange curves represent the results after applying the imaging weights from the linear models trained with \textit{eight maps}, \textit{two maps}, and \textit{three maps}. The green and pink curves display the results after applying the imaging weights from the non-linear models trained with \textit{three maps} and \textit{four maps}. The dark and light shades represent the $97.5$ percentile from cross correlating the imaging systematic maps and the $\fnl=0$ and $76.9$ lognormal density fields, respectively.}\label{fig:clxmock}
+\caption{The square of the cross power spectra between the DESI LRG targets and imaging systematic maps normalized by the auto power spectrum of the imaging systematic maps: Galactic extinction (EBV), stellar density (nStar), depth in \textit{grzw1} (depth$_{grzw1}$), and seeing in \textit{grz} (psfsize$_{grz}$). The black curves display the cross spectra before imaging systematic correction. The red, blue and orange curves represent the results after applying the imaging weights from the linear models trained with \textit{eight maps}, \textit{two maps}, and \textit{three maps}. The green and pink curves display the results after applying the imaging weights from the nonlinear models trained with \textit{three maps} and \textit{four maps}. The dark and light shades represent the $97.5$ percentile from cross correlating the imaging systematic maps and the $\fnl=0$ and $76.9$ lognormal density fields, respectively.}\label{fig:clxmock}
 \end{figure*}
 
 \begin{figure*}
 \centering
 \includegraphics[width=0.95\textwidth]{nbar_mocks.pdf}
-\caption{The mean density contrast of the DESI LRG targets as a function of the imaging systematic maps: Galactic extinction (EBV), stellar density (nStar), depth in \textit{grzw1} (depth$_{grzw1}$), and seeing in \textit{grz} (psfsize$_{grz}$). The black curves display the results before imaging systematic correction. The red, blue and orange curves represent the relationships after applying the imaging weights from the linear models trained with \textit{eight maps}, \textit{two maps}, and \textit{three maps}. The green and pink curves display the results after applying the imaging weights from the non-linear models trained with \textit{three maps} and \textit{four maps}. The dark and light shades represent the $68\%$ dispersion of 1000 lognormal mocks with $\fnl=0$ and $76.92$, respectively.}\label{fig:nbarmock}
+\caption{The mean density contrast of the DESI LRG targets as a function of the imaging systematic maps: Galactic extinction (EBV), stellar density (nStar), depth in \textit{grzw1} (depth$_{grzw1}$), and seeing in \textit{grz} (psfsize$_{grz}$). The black curves display the results before imaging systematic correction. The red, blue and orange curves represent the relationships after applying the imaging weights from the linear models trained with \textit{eight maps}, \textit{two maps}, and \textit{three maps}. The green and pink curves display the results after applying the imaging weights from the nonlinear models trained with \textit{three maps} and \textit{four maps}. The dark and light shades represent the $68\%$ dispersion of 1000 lognormal mocks with $\fnl=0$ and $76.92$, respectively.}\label{fig:nbarmock}
 \end{figure*}
 
 
@@ -108,7 +108,7 @@ We briefly summarize two statistical tests based on the mean galaxy density cont
 \raggedleft
 \includegraphics[width=0.45\textwidth]{chi2test.pdf}
 \includegraphics[width=0.44\textwidth]{chi2test2.pdf}
-\caption{The remaining systematic error $\chi^{2}$ from the galaxy-imaging cross power spectrum (top) and the mean galaxy density contrast (bottom). The values observed in the DESI LRG targets before and after linear and non-linear treatments are quoted, and the histograms are constructed from 1000 realizations of clean lognormal mocks with $\fnl=0$ and $76.92$. \mc{Alex: can you show the DR9 chi2s as vertical lines rather than as text? Ashley: I think you could add one vertical dashed and/or dotted line to show the result for the Nonlinear 3 maps, which is what we adopt as the fiducial case.}}\label{fig:chi2test}
+\caption{The remaining systematic error $\chi^{2}$ from the galaxy-imaging cross power spectrum (top) and the mean galaxy density contrast (bottom). The values observed in the DESI LRG targets before and after linear and nonlinear treatments are quoted, and the histograms are constructed from 1000 realizations of clean lognormal mocks with $\fnl=0$ and $76.92$. \mc{Alex: can you show the DR9 chi2s as vertical lines rather than as text? Ashley: I think you could add one vertical dashed and/or dotted line to show the result for the Nonlinear 3 maps, which is what we adopt as the fiducial case.}}\label{fig:chi2test}
 \end{figure}
 
 
@@ -128,14 +128,14 @@ With this normalization, $\tilde{C}_{x_{i}}$ estimates the contribution of syste
 \end{equation}
 where the covariance matrix $\mathbb{C}_{X} = < \tilde{C}_{X, \ell} \tilde{C}_{X, \ell'} >$ is constructed from the lognormal mocks. These $\chi^{2}$ values are measured for every clean mock realization with the \textit{leave-one-out} technique and compared to the values observed in the LRG sample with various imaging systematic corrections. Specifically, we use 999 realizations to estimate a covariance matrix and then apply the covariance matrix from the 999 realizations to measure the $\chi^{2}$ for the one remaining realization. This process is repeated for all 1000 realizations to construct a histogram for $\chi^{2}$. We only include the bandpower bins from $\ell=2$ to $20$ with $\Delta\ell=2$, and test for the robustness with higher $\ell$ modes in Appendix \ref{sec:scalesys}. 
 
-Figure \ref{fig:clxmock} shows $\tilde{C}_{X}$ from the DESI LRG targets before and after applying various corrections for imaging systematics. The dark and light shades show the 97.5$^{\rm th}$ percentile from the $\fnl=0$ and $76.9$ mocks, respectively. Without imaging weights, the LRG sample has the highest cross-correlations against extinction, stellar density, and depth in z (solid black curve). There is less significant correlations against depth in the g and r bands, and psfsize in the z band, which could be driven because of the inner correlations between the imaging systematic maps. First, we consider cleaning the sample with the linear model using two maps (extinction and depth in r) as identified from the Pearson correlation. With linear two maps (dot-dashed blue curve), most of the cross power signals are reduced below statistical uncertainties, especially against extinction, stellar density, and depth. However, the cross power spectra against psfsize in r and z increases slightly on $6<\ell<20$ and $6<\ell<14$, respectively. Very likely, large-scale cross correlations ($\ell < 6$) are reduced using extinction and depth in the z-band, but there are some residual cross correlations on smaller scales ($\ell > 6$) which cannot be mitigated with our set of two maps. The linear three maps (dotted orange curve) approach alleviates the cross power spectrum against psfsize in r. On the other hand, non-linear three maps can reduce the cross correlations against both the r and z-band psfsize maps, which indicates the benefit of using a non-linear approach. For benchmark, we also show the normalized cross spectra after cleaning the LRG sample with linear eight maps and non-linear four maps. 
+Figure \ref{fig:clxmock} shows $\tilde{C}_{X}$ from the DESI LRG targets before and after applying various corrections for imaging systematics. The dark and light shades show the 97.5$^{\rm th}$ percentile from the $\fnl=0$ and $76.9$ mocks, respectively. Without imaging weights, the LRG sample has the highest cross-correlations against extinction, stellar density, and depth in z (solid black curve). There is less significant correlations against depth in the g and r bands, and psfsize in the z band, which could be driven because of the inner correlations between the imaging systematic maps. First, we consider cleaning the sample with the linear model using two maps (extinction and depth in r) as identified from the Pearson correlation. With linear two maps (dot-dashed blue curve), most of the cross power signals are reduced below statistical uncertainties, especially against extinction, stellar density, and depth. However, the cross power spectra against psfsize in r and z increases slightly on $6<\ell<20$ and $6<\ell<14$, respectively. Very likely, large-scale cross correlations ($\ell < 6$) are reduced using extinction and depth in the z-band, but there are some residual cross correlations on smaller scales ($\ell > 6$) which cannot be mitigated with our set of two maps. The linear three maps (dotted orange curve) approach alleviates the cross power spectrum against psfsize in r. On the other hand, nonlinear three maps can reduce the cross correlations against both the r and z-band psfsize maps, which indicates the benefit of using a nonlinear approach. For benchmark, we also show the normalized cross spectra after cleaning the LRG sample with linear eight maps and nonlinear four maps. 
 
 \subsubsection{Mean density contrast}
 We calculate the histogram of the mean density contrast relative to the $j^{\rm th}$ imaging property, $x_{j}$:
 \begin{equation}
 \delta_{x_{j}} = ({\overline{\rho}})^{-1} \frac{\sum_{i} \rho_{i} W_{i}}{\sum_{i} W_{i}},
 \end{equation}
-where $\overline{\rho}$ is the global mean galaxy density, $W_{i}$ is the survey window in pixel $i$, and the summations over $i$ are evaluated from the pixels in every bin of $x_{j}$. We compute the histograms against all other imaging properties (see Figure \ref{fig:ng}). We use a set of eight equal-width bins for every imaging map, which results in a total of 72 bins. Then, we construct the total mean density contract as,
+where $\overline{\rho}$ is the global mean galaxy density, $W_{i}$ is the survey window in pixel $i$, and the summations over $i$ are evaluated from the pixels in every bin of $x_{j}$. We compute the histograms against all nine imaging properties (see Figure \ref{fig:ng}). We use a set of eight equal-width bins for every imaging map, which results in a total of 72 bins. Then, we construct the total mean density contract as,
 \begin{equation}
 \delta_{X} = [\delta_{x_{1}}, \delta_{x_{2}}, \delta_{x_{3}}, ..., \delta_{x_{9}}],
 \end{equation}
@@ -143,14 +143,13 @@ and the total residual error as,
 \begin{equation}
 \chi^{2} = \delta_{X}^{T} \mathbb{C_{\delta}}^{-1} \delta_{X},
 \end{equation}
-where the covariance matrix $\mathbb{C}_{\delta} = < \delta_{X} \delta_{X}>$ is constructed from the lognormal mocks. Figure \ref{fig:nbarmock} shows the mean density contrast against the imaging properties for the DESI LRG targets. The dark and light shades represent the $1\sigma$ level fluctuations observed in 1000 lognormal density fields respectively with $\fnl=0$ and $76.92$. The DESI LRG targets before treatment (solid curve) exhibits a strong trend around $10\%$ against the z-band depth which is consistent with the cross power spectrum. Additionally, there are significant spurious trends against extinction and stellar density at about $5-6\%$. The linear approach is able to mitigate most of the systematic fluctuations with only extinction and depth in the z-band as input; however,  a new trend appears against the r-band psfsize map with the \textit{linear two maps} approach (dot-dashed blue curve), which is indicative of the psfsize-related systematics in our sample. This finding is in agreement with the cross power spectrum. We re-train the linear model with three maps, but we still observe around $2\%$ residual spurious fluctuations in the low ends of depth and psfsize, in the z band, which implies non-linear systematic effects exist. We find that the imaging weights from the non-linear model trained with the three identified maps (or four maps including the stellar density) is capable of reducing the fluctuations below $2\%$. Even with the non-linear three maps, we have about $1\%$ remaining systematic fluctuations against the z-band psfsize. 
+where the covariance matrix $\mathbb{C}_{\delta} = < \delta_{X} \delta_{X}>$ is constructed from the lognormal mocks. Figure \ref{fig:nbarmock} shows the mean density contrast against the imaging properties for the DESI LRG targets. The dark and light shades represent the $1\sigma$ level fluctuations observed in 1000 lognormal density fields respectively with $\fnl=0$ and $76.92$. The DESI LRG targets before treatment (solid curve) exhibits a strong trend around $10\%$ against the z-band depth which is consistent with the cross power spectrum. Additionally, there are significant spurious trends against extinction and stellar density at about $5-6\%$. The linear approach is able to mitigate most of the systematic fluctuations with only extinction and depth in the z-band as input; however,  a new trend appears against the r-band psfsize map with the \textit{linear two maps} approach (dot-dashed blue curve), which is indicative of the psfsize-related systematics in our sample. This finding is in agreement with the cross power spectrum. We re-train the linear model with three maps, but we still observe around $2\%$ residual spurious fluctuations in the low ends of depth and psfsize, in the z band, which implies nonlinear systematic effects exist. We find that the imaging weights from the nonlinear model trained with the three identified maps (or four maps including the stellar density) is capable of reducing the fluctuations below $2\%$. Even with the nonlinear three maps, we have about $1\%$ remaining systematic fluctuations against the z-band psfsize. We use the $\chi^{2}$ statistics to assess how significant these fluctuations are in comparison to the clean mocks. 
 
+Table \ref{tab:chi2test} summarizes the $\chi^{2}$ values observed in the data and the corresponding p-values inferred from the comparison to the clean $\fnl=0$ mocks. Figure \ref{fig:chi2test} shows the $\chi^{2}$ histograms from the normalized cross spectrum (top) and mean density contrast (bottom) statistics which are obtained from the $\fnl=0$ and $76.9$ lognormal mocks, respectively with dashed and solid lines. No mitigation is applied to these mocks, and thus the $\chi^{2}$ values are expected to be unbiased. The $\chi^{2}$ values observed in the DESI LRG targets are quoted for comparison, and the significance for each measurement is characterized by \textit{p-value} with respect to the $\fnl=0$ mocks without any mitigation applied to them. Before cleaning, our LRG sample has a cross power spectrum $\chi^{2}$ error of $20014.8$. After correction with the linear two maps approach, the cross spectrum $\chi^{2}$ is reduced to $375.1$ with p-value $=0.002$. Adding the r-band psfsize, the linear model reduces the $\chi^{2}$ down to $195.9$ with p-value $=0.044$; however, we can reject the null hypothesis that our sample with the linear three maps is properly cleaned at $95\%$ confidence. Even though cleaning with linear all maps gives the lowest cross spectrum $\chi^{2}$ of $129.2$ (and p-value $=0.239$), it potentially makes the analysis more prone to regressing out the true clustering signal, given the inner correlations among the imaging properties (Figure \ref{fig:pcc}). As an alternative, we apply the imaging weights from the nonlinear method with the extinction, z-band depth, and r-band psfsize maps (\textit{nonlinear three maps}). The cross power spectrum $\chi^{2}$ is reduced to $79.3$ with p-value $=0.594$. Adding the stellar density map reduces the cross power spectrum $\chi^{2}$ error to $70.9$ (p-value $=0.687$). Our cross power spectrum diagnostic supports the idea that a nonlinear cleaning approach is needed to properly regress out the remaining spurious fluctuations. We investigate the test with the cross power spectrum up to higher multipoles but find no evidence of remaining systematic errors (see Appendix \ref{sec:scalesys}). 
 
-We use the $\chi^{2}$ statistics to assess how significant these fluctuations are in comparison to the clean mocks. Table \ref{tab:chi2test} summarizes the $\chi^{2}$ values observed in the data and the corresponding p-values inferred from the comparison to the clean $\fnl=0$ mocks. Figure \ref{fig:chi2test} shows the $\chi^{2}$ histograms from the normalized cross spectrum (top) and mean density contrast (bottom) statistics which are obtained from the $\fnl=0$ and $76.9$ lognormal mocks, respectively with dashed and solid lines. No mitigation is applied to these mocks, and thus the $\chi^{2}$ values are expected to be unbiased. The $\chi^{2}$ values observed in the DESI LRG targets are quoted for comparison, and the significance for each measurement is characterized by \textit{p-value} with respect to the $\fnl=0$ mocks without any mitigation applied to them. Before cleaning, our LRG sample has a cross power spectrum $\chi^{2}$ error of $20014.8$. After correction with the linear two maps approach, the cross spectrum $\chi^{2}$ is reduced to $375.1$ with p-value $=0.002$. Adding the r-band psfsize, the linear model reduces the $\chi^{2}$ down to $195.9$ with p-value $=0.044$; however, we can reject the null hypothesis that our sample with the linear three maps is properly cleaned at $95\%$ confidence. Even though cleaning with linear all maps gives the lowest cross spectrum $\chi^{2}$ of $129.2$ (and p-value $=0.239$), it potentially makes the analysis more prone to regressing out the true clustering signal, given the inner correlations among the imaging properties (Figure \ref{fig:pcc}). As an alternative, we apply the imaging weights from the non-linear method with the extinction, z-band depth, and r-band psfsize maps (\textit{non-linear three maps}). The cross power spectrum $\chi^{2}$ is reduced to $79.3$ with p-value $=0.594$. Adding the stellar density map reduces the cross power spectrum $\chi^{2}$ error to $70.9$ (p-value $=0.687$). Our cross power spectrum diagnostic supports the idea that a non-linear cleaning approach is needed to properly regress out the remaining spurious fluctuations. We investigate the test with the cross power spectrum up to higher multipoles but find no evidence of remaining systematic errors (see Appendix \ref{sec:scalesys}). 
+\mc{Ashley: Add something at the end to clarify the reason that the extinction map can cause the stellar density trend is that they are strongly correlated.} Figure \ref{fig:chi2test} (bottom) shows the mean density $\chi^{2}$ observed in the mocks with or without $\fnl$. We find consistent results regardless of the underlying $\fnl$, which supports that our diagnostic is not sensitive to the fiducial cosmology. The values measured in the DESI LRG targets before and after applying imaging weights are quoted for comparison. The \textit{linear two maps} weights reduce the $\chi^{2}$ value from $679.8$ (before correction) to $178.8$. The p-value $=0$ indicates severe remaining systematic effects. Adding the r-band psfsize does not reduce the remaining systematics enough (p-value $=0$) even though the cleaning method yields a lower $\chi^{2}=130$. Training the linear model with all imaging systematic maps returns a more reasonable $\chi^{2}=90$ and p-value of $0.084$. However, regression with all imaging systematic maps as input can lead to the removal of the true clustering signal. With the imaging weights from the \textit{nonlinear three maps} approach, we obtain a $\chi^{2}$ value of $74.3$ with p-value $=0.392$. Re-training the nonlinear approach while adding the stellar density map (\textit{nonlinear four maps}) yields minor improvement: $\chi^{2}=73.2$ and p-value $=0.422$. The minor impact on $\chi^{2}$ indicates that the stellar density trend in the mean LRG density can be explained via extinction since these two properties are strongly correlated; In regions with high stellar density, there is likely to be a higher concentration of dust, which can cause greater extinction of light.
 
-\mc{Ashley: Add something at the end to clarify the reason that the extinction map can cause the stellar density trend is that they are strongly correlated.} Figure \ref{fig:chi2test} (bottom) shows the mean density $\chi^{2}$ observed in the mocks with or without $\fnl$. We find consistent results regardless of the underlying $\fnl$, which supports that our diagnostic is not sensitive to the fiducial cosmology. The values measured in the DESI LRG targets before and after applying imaging weights are quoted for comparison. The \textit{linear two maps} weights reduce the $\chi^{2}$ value from $679.8$ (before correction) to $178.8$. The p-value $=0$ indicates severe remaining systematic effects. Adding the r-band psfsize does not reduce the remaining systematics enough (p-value $=0$) even though the cleaning method yields a lower $\chi^{2}=130$. Training the linear model with all imaging systematic maps returns a more reasonable $\chi^{2}=90$ and p-value of $0.084$. However, regression with all imaging systematic maps as input can lead to the removal of the true clustering signal. With the imaging weights from the \textit{non-linear three maps} approach, we obtain a $\chi^{2}$ value of $74.3$ with p-value $=0.392$. Re-training the non-linear approach while adding the stellar density map (\textit{non-linear four maps}) yields minor improvement: $\chi^{2}=73.2$ and p-value $=0.422$. The minor impact on $\chi^{2}$ indicates that the stellar density trend in the mean LRG density can be explained via extinction since these two properties are strongly correlated; In regions with high stellar density, there is likely to be a higher concentration of dust, which can cause greater extinction of light.
-
-\mc{Ashley: I would maybe add a new subsubsection (but at least a new paragraph) to summarize the results of the subsection, as they are quite important. This is also where I would discuss the tests that were done prior to looking at the data Cell. The discussion would basically provide a strong justification for the 3 map case being the fiducial case and point out that this was decided prior to seeing the data results. (Some of the words you wrote at the beginning of section 3.5 would go instead in this summary.)} The mean density contrast and cross power spectrum tests presented here show the effectiveness of the different cleaning approaches for the LRG sample before measuring the galaxy power spectrum and $\fnl$. As summarized in Table \ref{tab:chi2test}, the results of these tests reveal that cleaning the LRG sample with non-linear three maps produces statistically consistent $\chi^{2}$ values with the clean mocks. Based on these findings, we identify non-linear three maps as the optimal cleaning approach for the LRG sample, because adding more imaging systematics maps could potentially further complicate the over-correction issue.
+\mc{Ashley: I would maybe add a new subsubsection (but at least a new paragraph) to summarize the results of the subsection, as they are quite important. This is also where I would discuss the tests that were done prior to looking at the data Cell. The discussion would basically provide a strong justification for the 3 map case being the fiducial case and point out that this was decided prior to seeing the data results. (Some of the words you wrote at the beginning of section 3.5 would go instead in this summary.)} The mean density contrast and cross power spectrum tests presented here show the effectiveness of the different cleaning approaches for the LRG sample before measuring the galaxy power spectrum and $\fnl$. As summarized in Table \ref{tab:chi2test}, the results of these tests reveal that cleaning the LRG sample with nonlinear three maps produces statistically consistent $\chi^{2}$ values with the clean mocks. Based on these findings, we identify nonlinear three maps as the optimal cleaning approach for the LRG sample, because adding more imaging systematics maps could potentially further complicate the over-correction issue.
 
 \begin{table}
   \caption{Mean density and cross power spectrum $\chi^{2}$ and p-values that are inferred from the comparison to the $\fnl=0$ clean mocks.}\label{tab:chi2test}
@@ -166,8 +165,8 @@ We use the $\chi^{2}$ statistics to assess how significant these fluctuations ar
    Linear Two Maps & 178.8 & 0 & 375.1 & 0\\
    Linear Three Maps & 130 & 0 & 195.9 & 0.04\\
    Linear Eight Maps & 90 & 0.08 & 129.2 & 0.24\\
-   Non-linear Three Maps & 74.3 & 0.39  & 79.3 & 0.59\\
-   Non-linear Four Maps & 73.2 & 0.42 & 70.9 & 0.69\\    
+   Nonlinear Three Maps & 74.3 & 0.39  & 79.3 & 0.59\\
+   Nonlinear Four Maps & 73.2 & 0.42 & 70.9 & 0.69\\    
     \hline
   \end{tabular}
 \end{table}
@@ -175,9 +174,9 @@ We use the $\chi^{2}$ statistics to assess how significant these fluctuations ar
 
 \subsection{Calibration of mitigation bias}\label{ssec:calibration}
 
-\mc{Santi: How all of this was computed did not seem very clear to me. It seems that this part is what later determines that fnl!=0 from the data. So I think it would be worth explaining it more.} \mc{Ashley: I would find a way to *strongly* emphasize that the result does not depend at all on how the mocks were contaminated. Perhaps just a concluding sentence or two in its own paragraph along the lines} \mc{Ashley: It is important to note that we find nearly identical results for the mitigation bias whether or not the mocks have any contamination. This can be seen by observing the solid and dashed curves displayed on Fig. 9} The template-based mitigation of imaging systematics removes some of the true clustering signal, and the amount of the removed signal increases as more maps are used for the regression. We calibrate the over-correction effect using the mocks presented in \S \ref{sec:data}. We applied the neural network model to both the $\fnl=0$ and $76.9$ simulations, with and without imaging systematics, using various sets of imaging systematic maps. Specifically, we consider \textit{non-linear three maps}, \textit{non-linear four maps}, and \textit{non-linear nine maps}. Then, we measure the power spectra from the mocks. We fit both the mean power spectrum and each individual power spectrum from the mocks. Figure \ref{fig:fnlbias} displays a comparison between the estimates of $\fnl$ before and after mitigation for the clean mocks. The best-fitting estimates are represented by the solid curves, and the individual spectra results are displayed as the scatter points. The results from fitting the mean power spectrum of the contaminated mocks are also shown via the dashed curves. We find nearly identical results for the biases caused by mitigation, whether or not the mocks have any contamination, which can be seen by observing the solid and dashed curves displayed on Figure \ref{fig:fnlbias} (see, also, Figure \ref{fig:clmocks}, for a comparison of the mean power spectrum). For clarity, the best-fitting estimates for the individual contaminated data are not shown in the figure.
+\mc{Santi: How all of this was computed did not seem very clear to me. It seems that this part is what later determines that fnl!=0 from the data. So I think it would be worth explaining it more.} \mc{Ashley: I would find a way to *strongly* emphasize that the result does not depend at all on how the mocks were contaminated. Perhaps just a concluding sentence or two in its own paragraph along the lines} \mc{Ashley: It is important to note that we find nearly identical results for the mitigation bias whether or not the mocks have any contamination. This can be seen by observing the solid and dashed curves displayed on Fig. 9} The template-based mitigation of imaging systematics removes some of the true clustering signal, and the amount of the removed signal increases as more maps are used for the regression. We calibrate the over-correction effect using the mocks presented in \S \ref{sec:data}. We applied the neural network model to both the $\fnl=0$ and $76.9$ simulations, with and without imaging systematics, using various sets of imaging systematic maps. Specifically, we consider \textit{nonlinear three maps}, \textit{nonlinear four maps}, and \textit{nonlinear nine maps}. Then, we measure the power spectra from the mocks. We fit both the mean power spectrum and each individual power spectrum from the mocks. Figure \ref{fig:fnlbias} displays a comparison between the estimates of $\fnl$ before and after mitigation for the clean mocks. The best-fitting estimates are represented by the solid curves, and the individual spectra results are displayed as the scatter points. The results from fitting the mean power spectrum of the contaminated mocks are also shown via the dashed curves. We find nearly identical results for the biases caused by mitigation, whether or not the mocks have any contamination, which can be seen by observing the solid and dashed curves displayed on Figure \ref{fig:fnlbias} (see, also, Figure \ref{fig:clmocks}, for a comparison of the mean power spectrum). For clarity, the best-fitting estimates for the individual contaminated data are not shown in the figure.
 
-To calibrate our methods, we fit a linear curve to the $\fnl$ estimates from the mean power spectrum of the mocks, $f_{\rm NL, no~mitigation, clean} = m_{1} f_{\rm NL, mitigated} + m_{2}$. The $m_{1}$ and $m_{2}$ coefficients for non-linear three, four, and nine maps are summarized in Table \ref{tab:debiasparams}. These coefficients represent the impact of the cleaning methods on the likelihood. We find that the uncertainty in $\fnl$ after mitigation increases by $m_{1}-1$. Figure \ref{fig:fnlbias} also shows that the choice of our cleaning method can have significant implications for the accuracy of the measured $\fnl$, and careful consideration should be given to the selection of the primary imaging systematic maps and the calibration of the cleaning algorithms in order to minimize systematic uncertainties.
+To calibrate our methods, we fit a linear curve to the $\fnl$ estimates from the mean power spectrum of the mocks, $f_{\rm NL, no~mitigation, clean} = m_{1} f_{\rm NL, mitigated} + m_{2}$. The $m_{1}$ and $m_{2}$ coefficients for nonlinear three, four, and nine maps are summarized in Table \ref{tab:debiasparams}. These coefficients represent the impact of the cleaning methods on the likelihood. We find that the uncertainty in $\fnl$ after mitigation increases by $m_{1}-1$. Figure \ref{fig:fnlbias} also shows that the choice of our cleaning method can have significant implications for the accuracy of the measured $\fnl$, and careful consideration should be given to the selection of the primary imaging systematic maps and the calibration of the cleaning algorithms in order to minimize systematic uncertainties.
 
 \begin{figure}
 \centering
@@ -193,9 +192,9 @@ To calibrate our methods, we fit a linear curve to the $\fnl$ estimates from the
 \hline
 \textbf{Cleaning Method} & $m_{1}$ & $m_{2}$ \\
 \hline
-Non-linear Three Maps & 1.17 & 13.95 \\
-Non-linear Four Maps & 1.32 & 26.97 \\
-Non-linear Nine Maps & 2.35 & 63.5\\
+Nonlinear Three Maps & 1.17 & 13.95 \\
+Nonlinear Four Maps & 1.32 & 26.97 \\
+Nonlinear Nine Maps & 2.35 & 63.5\\
 \hline
 \end{tabular}
 \end{center}
